# ComSeg

./: LICENSE  README.md  comseg.npy  count_matrix.npy  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  srcipt_breast_train  test
comseg/: clustering.py  dataset.py  draft.py  model.py
comseg/utils/: custom_louvain.py  plot.py
docs/source/: conf.py  index.rst  install.rst  installation_guide.rst  requirements.txt  userguide.rst
docs/source/comseg/: clustering.rst  comSegdict.rst  comseg.rst  dataset.rst  index.rst
docs/source/installation_guide/: index.rst  install.rst
docs/source/userguide/: Minimal_example.ipynb  SOPA_COMSEG.ipynb  count_matrix.npy  tutorial_0.ipynb
old_dist/: ComSeg-0.0.7-py3-none-any.whl
src/: __init__.py  main_A_B.py  main_cube_remove.py  main_elbow.py  main_humain.py  main_lustra.py  main_non_conv.py  main_non_conv_loop_rd.py  main_share.py
src/comseg/: __init__.py  clustering.py  dataset.py  dictionary.py  draft.py  model.py
src/comseg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sh/: loop_batch_img_ipt.sh  main_cube.sh  main_cube_original.sh  main_cube_original_eps_0.sh  main_cube_remove.sh  main_cube_remove_original.sh  main_cube_remove_original_eps_0.sh  main_elbow_irregular.sh  main_elbow_original_eps_0.sh  main_non_conv_original.sh  main_non_conv_original_eps_0.sh  pw13_loop_ipt.sh
tutorial/: count_matrix.npy  tutorial.ipynb  tutorial_0.ipynb  tutorial_detail.ipynb
tutorial/.ipynb_checkpoints/: Quick_start-checkpoint.ipynb  tutorial_0-checkpoint.ipynb  tutorial_detail-checkpoint.ipynb
(+8 files in other folders)
