



[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "ComSeg"
version = "1.1"
authors = [
  { name="Thomas Defard", email="thomas.defard@mines-paristech.fr" },
]
description = "single cell RNA profiling analysis of imaging-based spatial transcriptomics data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


